--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,15 @@ version: '3'
 
 services:
   app:
-    build:
-      context: flask/app
-    ports:
-        - "5000"
+    build: ./flask
+    container_name: flask_app
+    expose:
+        - "8080"
   nginx:
+    build: ./nginx
+    container_name: nginx
     image: nginx:latest
-    volumes:
-        - ../nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - app
+#    depends_on:
+#      - app
     ports:
       - "80:80"
