--- a/flask/app/Dockerfile
+++ b/flask/app/Dockerfile
@@ -5,4 +5,5 @@ COPY . .
 
 RUN pip install -r requirements.txt
 
-CMD gunicorn --bind 0.0.0.0:5000 app:app
+#CMD gunicorn --bind 0.0.0.0:5000 app:app
+CMD ["uwsgi", "app.ini"]
