--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,8 @@
-#FROM nginx
-#
-#RUN rm /etc/nginx/conf.d/default.conf
-#
-#COPY nginx.conf /etc/nginx/conf.d/
+FROM nginx
+
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY nginx.conf /etc/nginx/conf.d/
 
 
 
