--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,4 @@
 
-# how manu connects(clients)
-events {
-   worker_connections 1000;
-}
-
-
 http {
 
     server {
@@ -12,7 +6,9 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://app:5000;
+            include uwsgi_params;
+            uwsgi_pass flask:8080;
+#             proxy_pass http://app:8080;
         }
 
     }
